# lwsspy

./: .gitignore  Makefile  README.md  cost.slurm  cuis_catalog.pkl  data.npz  environment.yml  export_lsawade_2020_9_8_17_5_27.p  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  setup.cfg  startup.py  summitenv.yml  test.py  test1.py  test2.py  test_mpi4py.py
.github/workflows/: deploy_gh_pages.yml  python-package-conda.yml  test_package.yml
_modules/: index.html
_sources/: index.rst.txt
_sources/chapters/: bash.rst.txt  functions.rst.txt  git.rst.txt  hpc-installations.rst.txt  matplotlibtips.rst.txt
_static/: documentation_options.js
chapters/: bash.html  functions.html  git.html  hpc-installations.html  matplotlibtips.html  numpydoctips.html  one-liners-to-remember.html  paraview.html  seismology.html
docs/: index.rst  requirements.txt
docs/chapters/: functions.rst  one-liners-to-remember.rst
docs/source/: conf.py  index.rst
examples/: Misfit_analysis.ipynb
invdir/: .gitignore  CMTSOLUTION  CMTSOLUTION_Italy_shallow  station2.xml  station2_filtered.xml
lwsspy/: __init__.py  constants.py
lwsspy/download_cache/: README.md  README.py
lwsspy/geo/: azi_weights.py  geo_weights.py  get_slabs.py  plot_slab_slices.py  plot_slabs.py  slabkdtree.py
lwsspy/inversion/: Optimizer.py  optimizer.py  plot_model_history.py  plot_optimization.py  plot_single_parameter_optimization.py
lwsspy/maps/: bearing.py  fix_map_extent.py  gctrack.py  geo2disp.py  in_extent.py  line_buffer.py  map_axes.py  maps.py  reckon.py  (+12 more)
startupfiles/: python.py
(+919 files in other folders)
