[metadata]
# replace with your username:
name = lwsspy
version = 0.0.2
author = Lucas Sawade
author_email = lsawade@princeton.edu
description = LWSS Collection of Python Function
long_description = file: README.md
long_description_content_type = text/markdown
maintainer_email = lsawade@princeton.edu
url = https://github.com/lsawade/lwsspy.ml
project_urls =
    Documentation = https://github.com/lsawade/lwsspy
    TravisCI = https://travis-ci.com/github/lwsspy.ml/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
keywords = Fun, Education, Machine, Learning, Programming, 

[options]
namespace_packages = lwsspy
package_dir =
    =src
packages = find_namespace:
python_requires = >=3.6
install_requires =  
    numpy
    scipy
    matplotlib
    PyYAML
    mpi4py
    matplotlib
    autopep8
    xarray
    beautifulsoup4
    netcdf4
    cartopy
    psutil
tests_require = pytest
zip_safe = False

[options.extras_require]
docs = 
    sphinx
    numpydoc
    sphinx_book_theme
tests = 
    pytest
    py
    mypy

[options.entry_points]
console_scripts =
    pick_data_from_image = lwsspy.plot_util.pick_data_from_image:bin
    fpush = lwsspy.bin.fpush:bin
    fpull = lwsspy.bin.fpull:bin
    fwpush = lwsspy.bin.fwpush:bin
    fwpull = lwsspy.bin.fwpull:bin
    gpull = lwsspy.bin.gpull:gpull
    touchdir = lwsspy.bin.touchdir:bin
    
[options.packages.find]
where = src

